2005-05-24 Francois Proulx <francois.proulx@gmail.com>
	* Fixed typo in some translations
	* Cleaned-up todos
	
2005-05-18 Francois Proulx <francois.proulx@gmail.com>
	* Added strip_tags in RssPreview ( some malformed HTML would break the page layout )
	
2005-05-16 Francois Proulx <francois.proulx@gmail.com>
	* Changed login message in MainUI to make it clearer what the login button will do

2005-05-13 Philippe April <philippe@ilesansfil.org>
	* Added deployment status to node_list

2005-05-11 Francois Proulx <francois.proulx@gmail.com>
	* Began writing user profiles
	* Added many methods to User class
	* Added node quota fields in DB ( bandwidth, throttling ...)

2005-05-10 Francois Proulx <francois.proulx@gmail.com>
	* Fixed Login link in signup page ( MainUI.php ) if the Session has gw_id, gw_address, gw_port 
	  show physical login link
	  
2005-05-10 Francois Proulx <francois.proulx@gmail.com>
	* Added download button CSS class to style button
	
2005-05-10 Francois Proulx <francois.proulx@gmail.com>
	* Fixed wrong method name in File.php
	* Added strip tags to Langstring
	* Basic styling of content_admin table
	
2005-05-04 Francois Proulx <francois.proulx@gmail.com>
	* Fixed serialization issue ( flickr)
2005-05-04 Francois Proulx <francois.proulx@gmail.com>
	* Improved caching
	* Wrote very basic gridview code for Flickr
	
2005-05-04 Francois Proulx <francois.proulx@gmail.com>
	* Implemented caching for Flickr
	* Need to contact Phlickr to see how we could do better, since serialize does not work OK on objects
	
2005-05-04 Francois Proulx <francois.proulx@gmail.com>
	* Fixed bug concerning Content-Length header
	* Changed default Unit size for setLocalFileSize to bytes
	
2005-05-04 Francois Proulx <francois.proulx@gmail.com>
	* Added BLOB support
	* modified file_download.php to support new header attributes
	* Added ImportLargeObject, UnlinkLargeObject to PG SQL abtraction
	* Make sure your PHP.ini contains the right value to allow big downloads